      still present in some copies.)
  * data/fields/udeb-fields:
    + [NT] Add Auto-Built-Package and Build-Ids fields.  Thanks to
      Guillem Jover for the report.  (Closes: #808566)

  * data/spelling/corrections:
    + [JW] Add more corrections.

  * man/lintian.pod.in:
    + [NT,JW] Document clarify that "-L +=<value>" is valid.
      (Closes: #802729)

  * private/refresh-ftp-master-tags:
    + [JW] Use HTTPS for the ftp-master.debian.org URL.

 -- Niels Thykier <niels@thykier.net>  Sun, 20 Dec 2015 00:58:34 +0000

lintian (2.5.39) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - dh-exec-useless-usage
      - systemd-service-alias-without-extension

  * checks/binaries.pm:
    + [JW] Fix inconsistent parsing of a data file.
  * checks/cruft.pm:
    + [BR] Relax line length for minified javascript.
  * checks/debhelper.{desc,pm}:
    + [NT] Apply patches from Gergely Nagy to extend the dh-exec
      related checks.  (Closes: #794296, #801104)
  * checks/files.{desc,pm}:
    + [JW] Fix typo.
    + [JW] Fix inconsistent parsing of a data file.  (Closes: #790739)
  * checks/scripts.desc:
    + [JW] Fix typo.
  * checks/systemd.{desc,pm}:
    + [NT] Apply patch from Evgeni Golov to strip ".service" from
      aliases before looking for an init.d service of same name.
      (Closes: #773087)
    + [NT] Apply patch from Evgeni Golov to check that the Alias
      field of .service files ends with .service (as required by
      the systemd.unit specification).  (Closes: #808369)

  * data/binaries/embedded-libs:
    + [JW] Apply patch from James Cowgill to rename "polarssl" as
      "mbedtls".  (Closes: #808050)
  * data/binaries/hardening-tags:
    + [NT] Refresh with dpkg-architecture 1.18.3.
  * data/common/{architectures,multiarch-dirs}:
    + [NT] Refresh with dpkg-architecture 1.18.3.
  * data/fields/binary-fields:
    + [NT] Add "Auto-Built-Package" as known field in binary packages.